* BUG#7537 Do not set dunning if payment line is already reconciled

Version 1.14 - 2017-11-09
Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06
* FEA#0000 Module creation