@@ -11,5 +11,6 @@ extras_depend:
 xml:
     dunning.xml
     party.xml
+    account.xml
     authorizations.xml
     general_configuration.xml
