@@ -5,5 +5,7 @@ this repository contains the full copyright notices and license terms. -->
     <xpath expr="/form/field[@name='state']" position="after">
         <label name="last_process_date"/>
         <field name="last_process_date"/>
+        <label name="active"/>
+        <field name="active"/>
     </xpath>
 </data>
