@@ -1,3 +1,4 @@
+* BUG#8514 Ne pas générer de relance si il en existe déjà une inactive (qui pourrait être réactivée)
 * BUG#7537 Ne pas générer de relance si la ligne d'un paiement est déjà réconciliée
 
 Version 1.14 - 2017-11-09
